# python-project-50

./: .coverage  .gitignore  Makefile  README.md  demo.cast  pyproject.toml  sonar-project.properties
.github/workflows/: gendiff.yml  pythonci.yml
gendiff/: __init__.py  engine.py
gendiff/formats/: format_instruments.py  gendiff.py  general_format_instruments.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: gendiff_test.py  test_gendiff.py
tests/test_data/: correct_difficult_format_json.txt  correct_json_format.txt  missing.yml
