[project]
authors = [
    {name = "Siyovush", email = "shukurovsiyovush1@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "This package show differences between two files in console. Formats: stylish (default format), plain and json"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
